--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@prisma/client": "^4.5.0",
     "@vueuse/core": "^9.3.0",
     "bcrypt": "^5.1.0",
-    "uuid": "^9.0.0"
+    "chart.js": "^3.9.1",
+    "preline": "^1.2.1",
+    "uuid": "^9.0.0",
+    "vue-chartjs": "^4.1.2"
   },
   "prisma": {
     "schema": "server/database/schema.prisma"
